<resources>
    <string name="app_name">Humble Player</string>
    <string name="play_button">Play</string>
    <string name="back_button">Previous track</string>
    <string name="next_button">Next track</string>
    <string name="replay_button">Repeat</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="default_header">Humble player</string>
    <string name="default_name">Slow Track</string>
    <string name="default_artist_album">Lana Banana - Slow Album</string>
    <string name="list_label">Label</string>
    <string name="library_text">Library</string>
    <string name="folder_text">Folder</string>
</resources>
